--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ h2 {
     border: 4px solid rgb(255, 145, 0);
     background-color: #fff;
     margin: 0 auto;
+    font-size: 1.5rem;
 }
 
 .grid-container {
@@ -39,6 +40,7 @@ h2 {
 
 ul li {
     list-style: none;
+    font-size: 1rem;
 }
 
 .menu-heading {
@@ -73,4 +75,22 @@ ul li {
     grid-area: menu2;
     text-align: center;
     align-self: center;
+}
+
+
+@media only screen and (max-width: 810px) {
+    .grid-container {
+        grid-template-columns: 1fr;
+
+        grid-template-areas:
+        "header"
+        "menu1" 
+        "image" 
+        "menu2";
+    }
+
+    h2 {
+        margin-top: 20px;
+    }
+
 }
